[gd_scene load_steps=5 format=3 uid="uid://bh8gkcnf7vuu5"]

[ext_resource type="Script" path="res://Scenes/QuestionView/QuestionDrawing/QuestionDrawing.gd" id="1_mcdh6"]
[ext_resource type="PackedScene" uid="uid://bd4nl8lu11j5f" path="res://Scenes/UISounds/UISounds.tscn" id="2_p0hkt"]

[sub_resource type="LabelSettings" id="LabelSettings_vbs7m"]
font_size = 12

[sub_resource type="LabelSettings" id="LabelSettings_yl24p"]
font_size = 24

[node name="QuestionDrawing" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_mcdh6")

[node name="UISounds" parent="." instance=ExtResource("2_p0hkt")]

[node name="Center" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Center"]
layout_mode = 2
offset_left = 262.0
offset_top = -250.0
offset_right = 398.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Center/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Center/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Center/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Brush Colour:"
horizontal_alignment = 1

[node name="BrushColor" type="ColorPickerButton" parent="Center/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label2" type="Label" parent="Center/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Brush Width:"
horizontal_alignment = 1

[node name="BrushWidth" type="SpinBox" parent="Center/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 50.0
value = 3.0

[node name="Label3" type="Label" parent="Center/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Canvas Colour:"
horizontal_alignment = 1

[node name="CanvasColor" type="ColorPickerButton" parent="Center/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
color = Color(1, 1, 1, 1)

[node name="PromptContainer" type="VBoxContainer" parent="Center"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.0
offset_top = -320.0
offset_right = 39.0
offset_bottom = -262.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Center/PromptContainer"]
layout_mode = 2
text = "Your prompt:"
label_settings = SubResource("LabelSettings_vbs7m")
horizontal_alignment = 1

[node name="PromptLabel" type="Label" parent="Center/PromptContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_yl24p")
horizontal_alignment = 1

[node name="DistributePromptsButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 264.0
offset_top = 206.0
offset_right = 442.0
offset_bottom = 248.0
grow_horizontal = 2
grow_vertical = 2
text = "DISTRIBUTE PROMTPS"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.5
offset_top = 256.0
offset_right = 31.5
offset_bottom = 287.0
grow_horizontal = 2
grow_vertical = 2
text = "Submit"

[connection signal="minimum_size_changed" from="." to="." method="_on_minimum_size_changed"]
[connection signal="color_changed" from="Center/PanelContainer/MarginContainer/VBoxContainer/BrushColor" to="." method="_on_brush_color_color_changed"]
[connection signal="value_changed" from="Center/PanelContainer/MarginContainer/VBoxContainer/BrushWidth" to="." method="_on_brush_width_value_changed"]
[connection signal="color_changed" from="Center/PanelContainer/MarginContainer/VBoxContainer/CanvasColor" to="." method="_on_canvas_color_color_changed"]
[connection signal="pressed" from="DistributePromptsButton" to="." method="_on_distribute_prompts_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
